2004-12-12  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/thread.c, kaffe/kaffevm/thread.h:
	  Back out last change to these files, it caused test cases to
	  fail.

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/jni/jni-string.c, kaffe/kaffevm/jni/jni_funcs.h:
	  Remove const declaration from 3rd parameter of
	  KaffeJNI_ReleaseStringUTFChars.

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/utf8const.c, kaffe/kaffevm/jni/jni-string.c,
	  kaffe/kaffevm/systems/unix-pthreads/syscalls.c,
	  libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c:
	  Signed/unsigned warning fixes(size_t kinda stuff).

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/thread.c, kaffe/kaffevm/thread.h:
	  Make firstStartThread and exitThread NONRETURNING.

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* libraries/javalib/javax/swing/tree/DefaultTreeCellEditor.java:
	  Fix type in javadoc for the EditorContainer method.

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* libraries/clib/classpath/jcl.c:
	  In JCL_ThrowException, use fputs instead of fprintf.  Fixes
	  a gcc waring, using a non-constant format string.

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* scripts/GCCWarning.pm, scripts/JikesWarning.pm,
	  scripts/LogWarning.pm, scripts/sort-warnings.pl:
	  Add ability to ignore specify warnings.

2004-12-11  Adam Heath  <doogie@brainfood.com>

	* scripts/GCCWarning.pm, scripts/JikesWarning.pm,
	  scripts/LogWarning.pm, scripts/Registry.pm,
	  scripts/WarningDescription.pm, scripts/sort-warnings.pl:
	  Reindent.

2004-12-11  Adam Heath  <doogie@brainfood.com>

	* include/jsyscall.h:
	  Improving formatting.

2004-12-11  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/CardLayout.java,
	libraries/javalib/java/awt/Menu.java,
	libraries/javalib/java/awt/MenuItem.java,
	libraries/javalib/java/awt/Panel.java,
	libraries/javalib/java/awt/Polygon.java,