@@ -1,3 +1,8 @@
+2004-12-11  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/java/awt/Component.java:
+	Resynced with GNU Classpath. Whitespace changes.
+	
 2004-12-12  Adam Heath  <doogie@brainfood.com>
 
 	* kaffe/kaffevm/thread.c, kaffe/kaffevm/thread.h:
